# fuzzy_name_match

./: Cargo.toml  LICENSE  README.md
benches/: matchers.rs
examples/: ensemble.rs  hybrid.rs  jaccard.rs  jaro_winkler.rs  soundex.rs
src/: ensemble.rs  lib.rs  prelude.rs
src/jaccard/: compare.rs  mod.rs
src/jaro/: compare.rs  compute.rs  config.rs  mod.rs
src/shared/: compute.rs
src/soundex/: compare.rs  encode.rs  mod.rs
